--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,30 @@
 .contentApp {
-    max-width: 1440px;
+    /* max-width: 1440px; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.formCenter {
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
     align-items: center;
-    padding: 0.5em;
-    margin: 0 auto;
+    justify-content: center;
 }
+
+/* .no-autocomplete input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+    z-index: 0;
+} */
+
+/* input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 1000px #ffffff inset !important;
+    -webkit-text-fill-color: black !important;
+} */
