--- a/src/components/auth/styles/login.css
+++ b/src/components/auth/styles/login.css
@@ -1,14 +1,6 @@
-.formLogin {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .formLogin-container {
-  max-width: 100%;
-  height: 600px;
+  max-width: 400px;
+  height: 480px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +16,7 @@
 .formLogin-container-cabezera {
   width: 100%;
   height: 25%;
-  background-color: var(--mcYellow);
+  background-color: var(--secondary);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,8 +29,8 @@
 }
 
 .formLogin-container-form {
-  width: 95%;
-  height: 75%;
+  max-width: 400px;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,7 +38,7 @@
 }
 
 .formLogin-container-TextField {
-  margin-bottom: 0.8em;
+  width: 280px;
 }
 
 .formLogin-container-button {
@@ -59,7 +51,6 @@
   width: 120px;
   aspect-ratio: 2.2;
   border-radius: 50px;
-  background-color: var(--mcBlue) !important;
   margin-top: 1em;
 }
 
