--- a/src/components/UI/navbar/styles/navbar.css
+++ b/src/components/UI/navbar/styles/navbar.css
@@ -1,12 +1,13 @@
 .navbar {
     width: 100vw;
-    height: 80px;
+    height: 65px;
     display: flex;
     justify-content: space-between;
     background-color: var(--primary);
     align-items: center;
     padding: 0 2em;
     color: var(--white);
+    position: relative;
 }
 
 .navbar-container {
@@ -17,7 +18,7 @@
 
 .navbar-container-menu {
     cursor: pointer !important;
-    z-index: 10000;
+    z-index: 1000;
 }
 
 .navbar-container-logo {
@@ -39,14 +40,14 @@
 
 .navbar-container-search {
     width: 100%;
-    background-color: transparent;
+    background-color: white;
     border: none;
     border-radius: 2em;
     overflow: hidden;
 }
 
 .navbar-container-search input {
-    width: 250px;
+    width: 230px;
     background-color: white;
     border: none;
     height: 13px;
