--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   --greyM: #8b8b8bef;
   --black: #0000;
   --mcBlackGrey: #3d3845;
-  --mcBlackBlue: #C5D7DF;
+  --mcBackBlue: #C5D7DF;
+  --redMc: #7c0000;
 }
 
 * {
@@ -24,6 +25,14 @@ ul li {
 
 a {
   text-decoration: none;
+}
+
+img {
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .flex {
@@ -65,6 +74,7 @@ a {
 /* customScrollbar.css */
 .custom-scrollbar {
   overflow-y: auto;
+  scroll-behavior: smooth;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
